chore: imported icons for bottom navigation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/chatting_icon.png
+    - assets/market_manage_icon.png
+    - assets/order_list_icon.png
+    - assets/review_manage_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
