--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
   flutter_pannable_rating_bar: ^2.7.2+1
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
